--- a/index.html
+++ b/index.html
@@ -179,10 +179,11 @@
         Data sources: <a href=https://myhospitalsapi.aihw.gov.au/index.html>AIHW MyHospitals API</a>, ABS Census 
         <a href="https://www.abs.gov.au/statistics/people/population/regional-population/2023-24#data-downloads">Population</a> & 
         <a href="https://www.abs.gov.au/statistics/people/people-and-communities/socio-economic-indexes-areas-seifa-australia/latest-release#data-downloads">SEIFA</a> Data, 
-        <a href="https://vahi.vic.gov.au/ambulance-services/high-priority-time-critical-incidents-priority-code-1"></a>Victorian Health Services (VAHI). <br>
+        <a href="https://vahi.vic.gov.au/ambulance-services/high-priority-time-critical-incidents-priority-code-1">Victorian Health Services (VAHI)</a>. <br>
         Visualisation built with Vega-Lite.</p>
     </footer>
   </div>
   </div>
 </body>
+
 </html>
